Update rules and host mkspec to generate arm qmake tools
This is required to compile Qt programs on the N900 directly (I'm
using a chroot sdk there).  Trying to build Qt itself on the N900
would take too long and would require these and more modifications
anyway.

--- a/mkspecs/linux-host-g++/qmake.conf
+++ b/mkspecs/linux-host-g++/qmake.conf
@@ -12,7 +12,7 @@ QMAKE_INCREMENTAL_STYLE = sublib
 # qmake configuration for common gcc
 #
 
-QMAKE_CC                = host-gcc
+QMAKE_CC                = gcc
 QMAKE_CFLAGS            += -pipe
 QMAKE_CFLAGS_DEPS       += -M
 QMAKE_CFLAGS_WARN_ON    += -Wall -W
@@ -26,7 +26,7 @@ QMAKE_CFLAGS_HIDESYMS   += -fvisibility=hidden
 QMAKE_CFLAGS_PRECOMPILE += -x c-header -c ${QMAKE_PCH_INPUT} -o ${QMAKE_PCH_OUTPUT}
 QMAKE_CFLAGS_USE_PRECOMPILE += -include ${QMAKE_PCH_OUTPUT_BASE}
 
-QMAKE_CXX               = host-g++
+QMAKE_CXX               = g++
 QMAKE_CXXFLAGS          += $$QMAKE_CFLAGS
 QMAKE_CXXFLAGS_DEPS     += $$QMAKE_CFLAGS_DEPS
 QMAKE_CXXFLAGS_WARN_ON  += $$QMAKE_CFLAGS_WARN_ON
@@ -40,10 +40,10 @@ QMAKE_CXXFLAGS_HIDESYMS += $$QMAKE_CFLAGS_HIDESYMS -fvisibility-inlines-hidden
 QMAKE_CXXFLAGS_PRECOMPILE += -x c++-header -c ${QMAKE_PCH_INPUT} -o ${QMAKE_PCH_OUTPUT}
 QMAKE_CXXFLAGS_USE_PRECOMPILE = $$QMAKE_CFLAGS_USE_PRECOMPILE
 
-QMAKE_LINK              = host-g++
-QMAKE_LINK_SHLIB        = host-g++
-QMAKE_LINK_C            = host-gcc
-QMAKE_LINK_C_SHLIB      = host-gcc
+QMAKE_LINK              = g++
+QMAKE_LINK_SHLIB        = g++
+QMAKE_LINK_C            = gcc
+QMAKE_LINK_C_SHLIB      = gcc
 QMAKE_LFLAGS            +=
 QMAKE_LFLAGS_RELEASE    += -Wl,-O1
 QMAKE_LFLAGS_DEBUG      +=
@@ -104,8 +104,8 @@ QMAKE_LIBS_THREAD     = -lpthread
 QMAKE_MOC             = $$[QT_INSTALL_BINS]/moc
 QMAKE_UIC             = $$[QT_INSTALL_BINS]/uic
 
-QMAKE_AR              = host-ar cqs
-QMAKE_OBJCOPY         = host-objcopy
+QMAKE_AR              = ar cqs
+QMAKE_OBJCOPY         = objcopy
 QMAKE_RANLIB          =
 
 QMAKE_TAR             = tar -cf
@@ -117,7 +117,7 @@ QMAKE_COPY_DIR        = $(COPY) -r
 QMAKE_MOVE            = mv -f
 QMAKE_DEL_FILE        = rm -f
 QMAKE_DEL_DIR         = rmdir
-QMAKE_STRIP           = host-strip
+QMAKE_STRIP           = strip
 QMAKE_STRIPFLAGS_LIB += --strip-unneeded
 QMAKE_CHK_DIR_EXISTS  = test -d
 QMAKE_MKDIR           = mkdir -p
