--- a/debian/rules
+++ b/debian/rules
@@ -49,10 +49,14 @@ endif
 ifeq ($(TARGET_BUILD),1)
 	GL_BACKEND=es2
 	# On the target, moc, rcc, uic and qmake are built as host tools, so we'll strip them later
-	HOST_EXCLUDES=-X/moc -X/rcc -X/uic -X/qmake -X/lrelease
-	EXTRA_STRIP_ARGS=$(HOST_EXCLUDES)
-	EXTRA_HOST_STRIP_ARGS=--strip-all bin/moc bin/rcc bin/uic bin/qmake bin/lrelease
-	HOST_MKSPEC=-spec $(CURDIR)/mkspecs/linux-host-g++
+#	HOST_EXCLUDES=-X/moc -X/rcc -X/uic -X/qmake -X/lrelease
+#	EXTRA_STRIP_ARGS=$(HOST_EXCLUDES)
+#	EXTRA_HOST_STRIP_ARGS=--strip-all bin/moc bin/rcc bin/uic bin/qmake bin/lrelease
+#	HOST_MKSPEC=-spec $(CURDIR)/mkspecs/linux-host-g++
+	HOST_EXCLUDES=
+	EXTRA_STRIP_ARGS=
+	EXTRA_HOST_STRIP_ARGS=
+	HOST_MKSPEC=
 else
 	HOST_EXCLUDES=
 	GL_BACKEND=desktop
