GCC 4.7.2 optimization flags

--- a/mkspecs/linux-g++-maemo5/qmake.conf
+++ b/mkspecs/linux-g++-maemo5/qmake.conf
@@ -13,8 +13,8 @@ QMAKE_CFLAGS            += -pipe
 QMAKE_CFLAGS_DEPS       += -M
 QMAKE_CFLAGS_WARN_ON    += -Wall -W
 QMAKE_CFLAGS_WARN_OFF   += -w
-QMAKE_CFLAGS_RELEASE    += -O2 -fno-omit-frame-pointer -fno-optimize-sibling-calls -mthumb -fno-strict-volatile-bitfields -Wno-cast-align -Wno-psabi
-QMAKE_CFLAGS_DEBUG      += -g -mthumb -fno-strict-volatile-bitfields -Wno-cast-align -Wno-psabi
+QMAKE_CFLAGS_RELEASE    += -O3 -mfpu=neon -ffast-math -flto=4 -fgraphite -ftree-vectorize -mthumb -fno-strict-volatile-bitfields -Wno-cast-align -Wno-psabi -fno-inline-functions -fno-unswitch-loops -fno-predictive-commoning -fno-gcse-after-reload -fno-ipa-cp-clone
+QMAKE_CFLAGS_DEBUG      += -g -mfpu=neon -mthumb -fno-strict-volatile-bitfields -Wno-cast-align -Wno-psabi
 QMAKE_CFLAGS_SHLIB      += -fPIC
 QMAKE_CFLAGS_STATIC_LIB += -fPIC
 QMAKE_CFLAGS_YACC       += -Wno-unused -Wno-parentheses
@@ -41,7 +41,7 @@ QMAKE_LINK_SHLIB        = g++
 QMAKE_LINK_C            = gcc
 QMAKE_LINK_C_SHLIB      = gcc
 QMAKE_LFLAGS            += -Wl,-rpath-link,/usr/lib
-QMAKE_LFLAGS_RELEASE    += -Wl,-O1 -Wl,--hash-style=gnu
+QMAKE_LFLAGS_RELEASE    += -Wl,-O1 -Wl,--hash-style=gnu -O3 -ffast-math -fgraphite -ftree-vectorize -fno-inline-functions -fno-unswitch-loops -fno-predictive-commoning -fno-gcse-after-reload -fno-ipa-cp-clone
 QMAKE_LFLAGS_DEBUG      +=
 QMAKE_LFLAGS_APP        +=
 QMAKE_LFLAGS_SHLIB      += -shared
