--- a/debian/rules
+++ b/debian/rules
@@ -149,7 +149,7 @@ build-uitools:
 	bin/qmake -o tools/designer/src/uitools/Makefile tools/designer/src/uitools/uitools.pro
 	$(MAKE) -C tools/designer/src/uitools
 
-common-install-arch:: install-dbus-tools install-linguist-tools install-maemo5-examples install-uitools install-qml-tool optify-libs optify-translations
+common-install-arch:: install-dbus-tools install-linguist-tools install-maemo5-examples install-uitools install-qml-tool qmeegogsh optify-libs optify-translations
 
 install-dbus-tools:
 	$(MAKE) -C tools/qdbus/qdbusxml2cpp $(DEB_MAKE_INSTALL_TARGET)
@@ -168,6 +168,10 @@ install-uitools:
 install-qml-tool:
 	$(MAKE) -C debian/qmlviewer-experimental-desktop $(DEB_MAKE_INSTALL_TARGET)
 	$(MAKE) -C tools/qml $(DEB_MAKE_INSTALL_TARGET)
+
+qmeegogsh:
+	qmake tools/qmeegographicssystemhelper/ -o tools/qmeegographicssystemhelper/Makefile
+	$(MAKE) -C tools/qmeegographicssystemhelper $(DEB_MAKE_INSTALL_TARGET)
 
 optify-libs:
 	mkdir -p $(DEB_DESTDIR)/opt/lib
@@ -234,6 +238,11 @@ clean::
 	  mkspecs/qconfig.pri \
 	  src/corelib/global/qconfig.* \
 	;
+
+	# QMeeGoGraphicsSystemHelper
+
+	$(MAKE) -C tools/qmeegographicssystemhelper clean
+	rm -f tools/qmeegographicssystemhelper/Makefile
 	
 	# Misc. directories
 	rm -rf \
@@ -307,4 +316,3 @@ clean::
 #	if test -e debian/$(cdbs_curpkg)/DEBIAN/shlibs ; then \
 #		sed 's/>=[^)]*/= $(CURRENTVERSION)/' debian/$(cdbs_curpkg)/DEBIAN/shlibs >> debian/shlibs.local ;\
 #	fi
-
