Workaround gcc4.7.2 bug - build fails with gcc internal error on -O2
Signed-off-by: Ivaylo Dimitrov <freemangordon@abv.bg>

--- a/mkspecs/linux-g++-maemo5/qmake.conf
+++ b/mkspecs/linux-g++-maemo5/qmake.conf
@@ -13,7 +13,7 @@ QMAKE_CFLAGS            += -pipe
 QMAKE_CFLAGS_DEPS       += -M
 QMAKE_CFLAGS_WARN_ON    += -Wall -W
 QMAKE_CFLAGS_WARN_OFF   += -w
-QMAKE_CFLAGS_RELEASE    += -O3 -mfpu=neon -ffast-math -flto=4 -fgraphite -ftree-vectorize -mthumb -fno-strict-volatile-bitfields -Wno-cast-align -Wno-psabi -fno-inline-functions -fno-unswitch-loops -fno-predictive-commoning -fno-gcse-after-reload -fno-ipa-cp-clone
+QMAKE_CFLAGS_RELEASE    += -O3 -mfpu=neon -fno-fast-math -fno-graphite -fno-tree-vectorize -mthumb -fno-strict-volatile-bitfields -Wno-cast-align -Wno-psabi -fno-inline-functions -fno-unswitch-loops -fno-predictive-commoning -fno-gcse-after-reload -fno-ipa-cp-clone
 QMAKE_CFLAGS_DEBUG      += -g -mfpu=neon -mthumb -fno-strict-volatile-bitfields -Wno-cast-align -Wno-psabi
 QMAKE_CFLAGS_SHLIB      += -fPIC
 QMAKE_CFLAGS_STATIC_LIB += -fPIC
